<resources>
    <string name="app_name">Glamour Cottage</string>
    <string name="introTitle"><font color="#2B4678">Welcome to \n  Glamour Cottage</font></string>
    <string name="Subtitle"><font color="#0000000">"Enjoy your shopping with glamour"</font></string>
    <string name="enter">Enter</string>
    <string name="login_title">Login!!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="loginTitle">Login</string>
    <string name="tv_notice">"Don't have an account? Sign up here"</string>
    <string name="signRegister">Sign Up</string>
    <string name="create_an_account">Create an account</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">confirm password</string>
    <string name="passwordRegister">Password</string>
    <string name="emailRegister">Email</string>
    <string name="usernameRegister">Username</string>
    <string name="pass">Pass</string>
    <string name="Title">Title\n</string>
    <string name="title_pro">Title</string>
    <string name="product_price">Product price</string>
    <string name="product_name">Product name</string>
    <string name="Welcome_admin">Welcome Admin</string>
    <string name="insert">Insert</string>
    <string name="view_product">View Product</string>
    <string name="insert_product">Insert Product</string>
    <string name="select_image">Select Image</string>
    <string name="add_product">Add Product</string>
    <string name="update">Update Product</string>
    <string name="delete">Delete Product</string>
    <string name="to_update_search_a_product">To Update Search A Product</string>
    <string name="update_product_name">Update Product Name</string>
    <string name="update_product_price">Update Product Price</string>
    <string name="update_product_id">Update Product ID</string>
    <string name="update_select_image">Update Select Image</string>
    <string name="update_search">Update Search</string>
    <string name="update_product">Update Product</string>
    <string name="to_delete_search_it">To Delete Search It</string>
    <string name="delete_product_name">Product Name</string>
    <string name="delete_product_price">Product Price</string>
    <string name="product_id">Product ID</string>
    <string name="search">Search It</string>
    <string name="delete_product">Delete Product</string>
    <string name="view_order">View Order</string>
    <string name="order">Order</string>
    <string name="product_name_order">Product Name</string>
    <string name="product_price_order">Product Price</string>
    <string name="select_dress_size">Select Dress Size</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="neg">-</string>
    <string name="incre">+</string>
    <string name="_1">1</string>
    <string name="total_0_00">Total: $0.00</string>
    <string name="place_order">Place Order</string>
    <string name="product_name_view">Product Name</string>
    <string name="product_price_view">Product Price</string>
    <string name="product_quantity_view">Product Quantity</string>
    <string name="order_summaries">Order Summaries</string>
    <string name="product_size">Product Size</string>
    <string name="total_price">Total Price</string>
    <string name="order_summary">Order Summary</string>
    <string name="product_size_view">Order Size</string>
    <string name="email">Email</string>
    <string name="username_order">Username</string>
    <string name="product_name_or">Product Name</string>
    <string name="price">Product Price</string>
    <string name="order_list_by_user">Order List By User</string>
    <string name="order_id">Order ID</string>
    <string name="order_number">Order Number</string>
    <string name="product_name_all">Product Name</string>
    <string name="Product_price">Price</string>
    <string name="price_order">Total Price</string>
    <string name="quantity">Quantity</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>


</resources>