<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".AdminHomeActivity"
    android:background="#A5D6A7">


    <TextView
        android:layout_width="214dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Welcome_admin"
        android:textSize="29sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btn_insert_product"
        android:layout_width="200dp"
        android:layout_height="62dp"
        android:layout_marginBottom="16dp"
        android:text="@string/insert" />

    <Button
        android:id="@+id/btn_view_product"
        android:layout_width="200dp"
        android:layout_height="62dp"
        android:layout_marginBottom="16dp"
        android:text="@string/view_product" />


    <Button
        android:id="@+id/btn_view_order_product"
        android:layout_width="200dp"
        android:layout_height="62dp"
        android:text="@string/view_order" />

</LinearLayout>