<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:gravity="center"
    android:background="@color/lightGreen"
    android:orientation="vertical"

    android:padding="16dp"
    tools:context=".InsertProductActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="@string/insert_product"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/et_product_name"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:hint="@string/product_name"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/et_product_price"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/product_price"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:layout_marginBottom="16dp"/>



    <ImageView
        android:id="@+id/iv_selected_image"
        android:layout_width="match_parent"
        android:layout_height="167dp"
        android:layout_marginBottom="16dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_launcher_background" />

    <Button
        android:id="@+id/btn_select_image"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/select_image" />

    <Button
        android:id="@+id/btn_insert_product"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/add_product" />

</LinearLayout>
