<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
    android:background="#F8BBD0"
android:padding="16dp"
android:gravity="center"
tools:context=".MainActivity"

tools:ignore="ExtraText">

<TextView
    android:id="@+id/tv_login_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="24dp"
    android:text="@string/login_title"
    android:textColor="@color/black"
    android:textSize="30sp"
    android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/surround"
        android:backgroundTint="#FFE0B2"
        android:orientation="vertical"

        android:padding="20dp">


<!--        <EditText-->
<!--            android:id="@+id/et_username"-->
<!--            android:layout_width="325dp"-->
<!--            android:layout_height="50dp"-->
<!--            android:layout_marginBottom="20dp"-->
<!--            android:background="@android:drawable/edit_text"-->
<!--            android:drawableLeft="@drawable/baseline_person_24"-->
<!--            android:hint="@string/username"-->
<!--            android:inputType="text" />-->


        <EditText
            android:id="@+id/et_email"
            android:layout_width="325dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@android:drawable/edit_text"
            android:drawableLeft="@drawable/baseline_person_24"
            android:hint="@string/email"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="325dp"
            android:layout_height="50dp"

            android:layout_marginBottom="20dp"
            android:background="@android:drawable/edit_text"

            android:drawableLeft="@drawable/baseline_lock_24"
            android:hint="@string/password"
            android:inputType="textPassword"

            />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="20dp"
            android:padding="12dp"
            android:text="@string/loginTitle" />


        <TextView
            android:id="@+id/tv_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/tv_notice"
            android:textColor="@color/black"
           android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_sign"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#2A3E2B"
            android:padding="12dp"
            android:text="@string/sign_up"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>