<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"


android:background="#F8BBD0"
android:orientation="vertical"
android:padding="16dp"
tools:context=".MainActivity"
tools:ignore="ExtraText">



<TextView

    android:id="@+id/tv_welcome"

    android:layout_width="345dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="50dp"
    android:layout_marginTop="50dp"
    android:gravity="center"
    android:text="@string/introTitle"
    android:textSize="31sp"
    android:textStyle="bold" />


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="23dp"
        android:text="@string/Subtitle"
        android:textAlignment="center"

        android:textStyle="italic"
        android:textSize="26sp" />

    <ImageView
    android:id="@+id/imageView"
    android:layout_width="match_parent"
    android:layout_height="216dp"
    android:layout_marginBottom="70dp"

    android:src="@drawable/start" />

<Button
    android:id="@+id/btn_welButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="#03A9F4"
    android:padding="12dp"
    android:text="@string/enter"
    android:textColor="@color/white"/>


</LinearLayout>