<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#F8BBD0"
android:orientation="vertical"
android:padding="18dp"
android:gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="3dp"
        android:gravity="center"
        >
<!--    <LinearLayout-->
<!--        android:id="@+id/inputLayoutCreate"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->

<TextView
    android:id="@+id/tv_register_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="24dp"
    android:text="@string/create_an_account"
    android:gravity="center"
    android:textColor="@android:color/black"
    android:textSize="28sp"
    android:textStyle="bold" />
<!--    </LinearLayout>-->


    <LinearLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/surround"
        android:backgroundTint="#FFE0B2"
        android:orientation="vertical"

        android:padding="20dp">



    <EditText
    android:id="@+id/et_register_username"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/usernameRegister"
    android:inputType="text"
    android:padding="12dp"
    android:layout_marginBottom="16dp"
    android:background="@android:drawable/edit_text"
    android:autofillHints="Username"
        android:drawableStart="@drawable/baseline_person_24"/>


<EditText
    android:id="@+id/et_register_email"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/emailRegister"
    android:inputType="textEmailAddress"
    android:padding="12dp"
    android:layout_marginBottom="16dp"
    android:background="@android:drawable/edit_text"
    android:autofillHints="email"
    android:drawableStart="@drawable/baseline_email_24"
    tools:ignore="TextFields" />



    <EditText
    android:id="@+id/et_register_mobile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/phone" android:inputType="number"
    android:padding="12dp"
    android:layout_marginBottom="16dp"
    android:background="@android:drawable/edit_text"
        android:drawableStart="@drawable/baseline_local_phone_24"
    android:autofillHints="phone" />




    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginBottom="10dp"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="pass"
            android:background="@android:drawable/edit_text"
            android:hint="@string/passwordRegister"


            android:inputType="textPassword"

            />
    </com.google.android.material.textfield.TextInputLayout>



        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:spinnerMode="dropdown"
            android:layout_marginBottom="10dp"
            android:background="@android:drawable/edit_text"

            />







<Button
    android:id="@+id/btn_signRegister"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:text="@string/signRegister"

    />


</LinearLayout>


<!--for showing output -->
<!--    <LinearLayout-->
<!--        android:id="@+id/outputLayout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:padding="30dp"-->
<!--        android:orientation="vertical"-->
<!--        android:visibility="gone"-->
<!--        >-->
<!--        <TextView-->
<!--            android:id="@+id/outputText"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textSize="20sp"-->
<!--            />-->
<!--    </LinearLayout>-->

</LinearLayout>




    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:visibility="gone"
            />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>